--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,7 @@
 								</execution>
 							</executions>
 							<configuration>
-								<additionalparam>-Xdoclint:none</additionalparam>
+								<doclint>none</doclint>
 							</configuration>
 						</plugin>
 					</plugins>
@@ -236,7 +236,7 @@
 								</execution>
 							</executions>
 							<configuration>
-								<additionalparam>-Xdoclint:none</additionalparam>
+								<doclint>none</doclint>
 							</configuration>
 						</plugin>
 					</plugins>
